Agregado de titulo y curso a las chequeras permitidas para Macro Click